# ConsoleGame

./: CMakeLists.txt
ConsoleGame/: CMakeLists.txt  ConsoleGame.sln  ConsoleGame.vcxproj  ConsoleGame.vcxproj.filters
ConsoleGame/ConsoleGame/: ConsoleGame.vcxproj  main.cpp
ConsoleGame/ConsoleGame/Debug/: ConsoleGame.exe.recipe  ConsoleGame.ilk  vc142.idb
ConsoleGame/ConsoleGame/Debug/ConsoleGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ConsoleGame/src/: main.cpp
ConsoleGame/src/scene/: player.cpp  player.h  scene.cpp  scene.h
ConsoleGame/src/scene/item/: bitcoin.cpp  bitcoin.h  iitem.h  point.h
app/: CMakeLists.txt
app/src/: main.cpp  mainwindow.cpp  mainwindow.h
app/src/model/controller/: controller.cpp  controller.h
app/src/model/items/: player.cpp  player.h
app/src/scene/controller/: controller.cpp  controller.h
app/src/scene/items/: item.cpp  item.h  player.cpp  player.h
app/src/utils/: utils.h
